--- a/biblioteca_sistedes/templates/biblioteca_sistedes/get_article.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/get_article.html
@@ -45,7 +45,7 @@
         <div id="entry-pdf" class="entry-content">
             <h3>Descargas:</h3>
             <p>Este artículo tiene una licencia de uso <a href="http://es.creativecommons.org/blog/licencias/" target="_blank" title="este enlace se abrirá en una ventana emergente">CreativeCommons - Reconocimiento (by)</a></p>
-            <p>Descarga el artículo haciendo <a href="/download/{{article.id }}" target="_blank" title="este enlace se abrirá en una ventana emergente">click aquí.</a></p>
+            <p>Descarga el artículo haciendo <a href="/download/{{article.id }}?type=a" target="_blank" title="este enlace se abrirá en una ventana emergente">click aquí.</a></p>
         </div>
     </article>
     {% endblock %}
