--- a/biblioteca_sistedes/templates/biblioteca_sistedes/article_detail.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/article_detail.html
@@ -25,7 +25,7 @@
             </ul>
         </div>
         <div class="form-group">
-            <label><h4>Archivo:</h4></label> <a href="/download/{{article.id }}" target="_blank"> {{ article.name }} </a>
+            <label><h4>Archivo:</h4></label> <a href="/download/{{article.id }}?type=a" target="_blank"> {{ article.name }} </a>
         </div>
     </div>
 </div>
