--- a/biblioteca_sistedes/templates/biblioteca_sistedes/base_form.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/base_form.html
@@ -21,10 +21,11 @@
     <script type="text/javascript" src="{% static 'biblioteca_sistedes/js/treeview/jquery.treeview.js' %}"></script>
     <script type="text/javascript" src="{% static 'biblioteca_sistedes/js/jquery.highlight.js' %}"></script>
     <script type="text/javascript" src="{% static 'biblioteca_sistedes/js/template.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'biblioteca_sistedes/js/tree.collapse.js' %}"></script>
     <script type="text/javascript" src="{% static 'biblioteca_sistedes/js/multi.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'biblioteca_sistedes/js/better-multiselect-filter.js' %}"></script>
     <script type="text/javascript" src="{% static 'biblioteca_sistedes/js/table_pagination.js' %}"></script>
+    <script type="text/javascript" src="{% static 'biblioteca_sistedes/js/multiselect-field.js' %}"></script>
+    <script type="text/javascript" src="{% static 'biblioteca_sistedes/js/tree.collapse.js' %}"></script>
     {% endblock %}
 
 
