--- a/biblioteca_sistedes/templates/biblioteca_sistedes/press_bulletins_by_year.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/press_bulletins_by_year.html
@@ -8,9 +8,9 @@
     <ul class="breadcrumbs">
         <li><a href="/">Inicio</a></li>
         <li><a href="/biblioteca/">Biblioteca</a></li>
-        <li><a href="/bulletins/press-bulletins">Boletines de Prensa</a></li>
+        <li><a href="/boletines/boletines-prensa/">Boletines de Prensa</a></li>
         {% if year %}
-        <li><a href="/bulletins/press-bulletins/{{year}}">{{ year }}</a></li>
+        <li><a href="/boletines/boletines-prensa/{{year}}/">{{ year }}</a></li>
         {% endif %}
     </ul>
 </div>
@@ -23,7 +23,7 @@
     <section id="interior" class="s">
             <ul>
                 {% for bulletin in bulletins_by_year %}
-                    <li><a href="/bulletins/press-bulletins/{{bulletin.date.year}}/{{bulletin.id}}">{{ bulletin.name }}</a></li>
+                    <li><a href="/boletines/boletines-prensa/{{bulletin.date.year}}/{{bulletin.id}}/">{{ bulletin.name }}</a></li>
                 {% endfor %}
             </ul>
         </div>
