--- a/biblioteca_sistedes/templates/biblioteca_sistedes/list_of_articles.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/list_of_articles.html
@@ -15,7 +15,7 @@
             </header>
             <div style="font-size: 0.8em;">
                 <p id="text-hightlight">
-                  {{  ar.description }}
+                  {{  ar.description|safe  }}
                 </p>
             </div>
             <p style="font-size: 0.8em;" id="text-hightlight">
