--- a/biblioteca_sistedes/templates/biblioteca_sistedes/search_engine.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/search_engine.html
@@ -16,7 +16,7 @@
             </header>
             <div style="font-size: 0.8em;">
                 <p id="text-hightlight">
-                  {{  conference.description }}
+                  {{  conference.description|safe  }}
                 </p>
             </div>
             <p style="font-size: 0.8em;" id="text-hightlight">
