--- a/biblioteca_sistedes/templates/biblioteca_sistedes/track_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/track_create.html
@@ -15,12 +15,12 @@
     </div>
     <div class="form-row">
         <div class="form-row-component-alone">
-                <label for="ed_tr"><h4>Preámbulo:</h4></label> {{ form_track.preamble }}
+                <label for="pre_tr"><h4>Preámbulo:</h4></label> {{ form_track.preamble }}
         </div>
     </div>
     <div class="form-row">
         <div class="form-row-component-alone">
-            <label for="ed_tr"><h4>Descripción:</h4></label> {{ form_track.description }}
+            <label for="desc_tr"><h4>Descripción:</h4></label> {{ form_track.description }}
         </div>
     </div>
     <div class="form-row">
