--- a/biblioteca_sistedes/templates/biblioteca_sistedes/advanced_search_engine.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/advanced_search_engine.html
@@ -53,7 +53,7 @@
                         <h3>{{forloop.counter}} - <a href="">{{ conference.name }}</a></h3>
                     </header>
                     <p id="text-hightlight">
-                        {{  conference.description }}
+                        {{  conference.description|safe  }}
                     </p>
                     <p style="font-size: 0.8em;" id="text-hightlight">
                         <strong>Autores: </strong>
