--- a/biblioteca_sistedes/templates/biblioteca_sistedes/edition_detail.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/edition_detail.html
@@ -17,8 +17,8 @@
                 <label><h4>Lugar:</h4></label> {{ edition.place }}
             </div>
             <div class="form-group">
-                <label><h4>Preámbulo:</h4></label> {{ track.preamble }}
-                <label><h4>Descripción:</h4></label> {{ track.description }}
+                <label><h4>Preámbulo:</h4></label> {{ edition.preamble|safe }}
+                <label><h4>Descripción:</h4></label> {{ edition.description|safe }}
             </div>
             <div class="form-group">
                 <label><h4>Conferencia:</h4></label> {{ edition.conference_id.name }}
