--- a/biblioteca_sistedes/templates/biblioteca_sistedes/get_track.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/get_track.html
@@ -10,8 +10,8 @@
         <li><a href="/biblioteca/">Biblioteca</a></li>
         <li><a href="/conferencias/">Conferencias</a></li>
         <li><a href="/conferencias/{{ track.edition_id.conference_id.domain }}/">{{ track.edition_id.conference_id.name }}</a></li>
-        <li><a href="/conferencias/{{ track.edition_id.conference_id.domain }}/{{track.edition_id.year}}/">{{track.edition_id.name}}</a></li>
-        <li><a href="/conferencias/{{ track.edition_id.conference_id.domain }}/{{track.edition_id.year}}/{{tr.id}}">{{track.name}}</a></li>
+        <li><a href="/conferencias/{{ track.edition_id.conference_id.domain }}/{{track.edition_id.year}}-{{track.edition_id.id}}/">{{track.edition_id.name}}</a></li>
+        <li><a href="/conferencias/{{ track.edition_id.conference_id.domain }}/{{track.edition_id.year}}-{{track.edition_id.id}}/{{track.id}}">{{track.name}}</a></li>
     </ul>
 </div>
 <article class="page page_168">
