--- a/biblioteca_sistedes/templates/biblioteca_sistedes/user_list.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/user_list.html
@@ -44,6 +44,7 @@
 
 					<td style="width: auto;">
 						<!--<a class="btn btn-primary" href="/user_view/{{ user.id }}/">Ver</a>-->
+                        <a href="#" onclick="showWizardPassword({{user.id}})" ><i class="fa fa-key fa-2x"></i></a>
 						<a class="btn btn-primary" href="/user_update/{{ user.id }}/"><i class="fa fa-edit fa-2x"></i></a>
 						<a class="btn btn-danger" href="/user_delete/{{ user.id }}/" onclick="clicked(event)"><i class="fa fa-trash fa-2x"></i></a>
 					</td>
