--- a/biblioteca_sistedes/templates/biblioteca_sistedes/user_registration.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/user_registration.html
@@ -54,6 +54,8 @@
             <div>
                 <input style="background-color: #006699;" class="form-submit" type="submit" value="Crear usuario">
                 <button onclick="window.location.href='/user_list/'" class="cancel-button">Cancelar</button>
+                <!-- <button type="button" style="background-color: #006699; float:right; height: 50px; margin-top: 45px;" class="form-submit" id="myBtn">Restablecer contraseña</button> -->
             </div>
         </div>
+
 {% endblock %}
