--- a/biblioteca_sistedes/templates/biblioteca_sistedes/author_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/author_create.html
@@ -26,7 +26,7 @@
     <div>
         <div>
             <input style="background-color: #006699;" class="form-submit" type="submit" value="Guardar autor">
-            <button onclick="window.location.href='/author_list/'" class="cancel-button">Cancelar</button>
+            <button type="button" onclick="window.location.href='/author_list/'" class="cancel-button">Cancelar</button>
         </div>
     </div>
 {% endblock %}
