--- a/biblioteca_sistedes/templates/biblioteca_sistedes/conference_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/conference_create.html
@@ -25,7 +25,7 @@
     <div>
         <div class="footer-form">
             <input class="form-submit" type="submit" value="Guardar conferencia">
-            <button onclick="window.location.href='/conference_list/'" class="cancel-button">Cancelar</button>
+            <button type="button" onclick="window.location.href='/conference_list/'" class="cancel-button">Cancelar</button>
         </div>
 
     </div>
