--- a/biblioteca_sistedes/templates/biblioteca_sistedes/article_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/article_create.html
@@ -49,6 +49,6 @@
     </br>
         <div>
             <input style="background-color: #006699;" class="form-submit" type="submit" value="Guardar artículo">
-            <button onclick="window.location.href='/article_list/'" class="cancel-button">Cancelar</button>
+            <button type="button" onclick="window.location.href='/article_list/'" class="cancel-button">Cancelar</button>
         </div>
 {% endblock %}
