--- a/biblioteca_sistedes/templates/biblioteca_sistedes/bulletin_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/bulletin_create.html
@@ -22,7 +22,7 @@
         <div>
             <div>
                 <input style="background-color: #006699;" class="form-submit" type="submit" value="Guardar boletín">
-                <button onclick="window.location.href='/bulletin_list/'" class="cancel-button">Cancelar</button>
+                <button type="button" onclick="window.location.href='/bulletin_list/'" class="cancel-button">Cancelar</button>
             </div>
         </div>
 {% endblock %}
