--- a/biblioteca_sistedes/templates/biblioteca_sistedes/edition_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/edition_create.html
@@ -38,7 +38,7 @@
         <div>
             <div>
                 <input style="background-color: #006699;" class="form-submit" type="submit" value="Guardar edición">
-                <button onclick="window.location.href='/edition_list/'" class="cancel-button">Cancelar</button>
+                <button type="button" onclick="window.location.href='/edition_list/'" class="cancel-button">Cancelar</button>
             </div>
         </div>
 {% endblock %}
