--- a/biblioteca_sistedes/templates/biblioteca_sistedes/track_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/track_create.html
@@ -32,7 +32,7 @@
     <div>
         <div>
             <input style="background-color: #006699;" class="form-submit" type="submit" value="Guardar track">
-            <button onclick="window.location.href='/track_list/'" class="cancel-button">Cancelar</button>
+            <button type="button" onclick="window.location.href='/track_list/'" class="cancel-button">Cancelar</button>
         </div>
     </div>
 {% endblock %}
