--- a/biblioteca_sistedes/templates/biblioteca_sistedes/user_registration.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/user_registration.html
@@ -33,6 +33,7 @@
                      </div>
              </div>
         </div>
+        {% if not id %}
         <div class="form-row">
             <div class="form-row-component">
                 <label for="pass_user"><h4>Constraseña:</h4></label> {{ form_user.password }}
@@ -50,10 +51,11 @@
                 <label for="rol_user"><h4>Rol:</h4></label> {{ form_user.rol }}
             </div>
         </div>
+        {% endif %}
         <div>
             <div>
                 <input style="background-color: #006699;" class="form-submit" type="submit" value="Crear usuario">
-                <button onclick="window.location.href='/user_list/'" class="cancel-button">Cancelar</button>
+                <button type="button" onclick="window.location.href='/user_list/'" class="cancel-button">Cancelar</button>
                 <!-- <button type="button" style="background-color: #006699; float:right; height: 50px; margin-top: 45px;" class="form-submit" id="myBtn">Restablecer contraseña</button> -->
             </div>
         </div>
