--- a/biblioteca_sistedes/templates/biblioteca_sistedes/article_detail.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/article_detail.html
@@ -6,9 +6,9 @@
 <h2><u> Detalle artículo </u></h2>
 {% csrf_token %}
 <div class="row">
-    <div class="col-md-8 col-md-offset-2">
-        <div class="form-group">
-            <label><h4>Nombre:</h4></label> {{ article.name }}
+    <div class="">
+        <div class="">
+            <label for="name_ar"><h4>Nombre:</h4></label> {{ article.name }}
         </div>
         <div class="form-group">
             <label><h4>Año:</h4></label> {{ article.year }}
