--- a/biblioteca_sistedes/templates/biblioteca_sistedes/article_list.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/article_list.html
@@ -19,10 +19,7 @@
 			<thead>
 				<tr>
 					<th>Nombre</th>
-					<th>Autores</th>
-					<th>Palabras clave</th>
-					<th>Derechos de acceso</th>
-                    <th>Tracks</th>
+					<th>Año</th>
                     <th>Acciones</th>
 				</tr>
 
@@ -33,11 +30,7 @@
                 {% if logged_user in article.user_ids.all or logged_user.rol == 1 %}
 				<tr>
 					<td>{{ article.name }}</td>
-					<td>{{ article.author_ids }}</td>
-					<td>{{ article.keyword_ids }}</td>
-                    <td>{{ article.access_right_ids }}</td>
-					<td>{{ article.track_ids }}</td>
-
+                    <td>{{ article.year }}</td>
 					<td style="width: auto;">
 						<a class="btn btn-primary" href="/article_view/{{ article.id }}/"><i class="fa fa-eye fa-2x"></i></a>
 						<a class="btn btn-primary" href="/article_update/{{ article.id }}/"><i class="fa fa-edit fa-2x"></i></a>
