--- a/biblioteca_sistedes/templates/biblioteca_sistedes/edition_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/edition_create.html
@@ -14,10 +14,12 @@
             </div>
         </div>
         <div class="form-row">
-            <div class="form-row-component">
+            <div class="form-row-component-alone">
                 <label for="pre_ed"><h4>Preámbulo:</h4></label> {{ form_edition.preamble }}
             </div>
-            <div class="form-row-component">
+        </div>
+        <div class="form-row">
+            <div class="form-row-component-alone">
                 <label for="desc_ed"><h4>Descripción:</h4></label> {{ form_edition.description }}
             </div>
         </div>
